--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -29,6 +29,10 @@ h1 {
     flex: 1 0 auto;
 }
 
+.main-container section {
+    margin-bottom: 40px;
+}
+
 
 .mainpage-service-wrapper  {
     display: flex;
@@ -39,55 +43,35 @@ h1 {
     width: 100%;
     max-width: 1024px;
 }
-.service-box-wrapper {
+
+.main-container section {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    position: relative;
-    max-width: 50%;
-    max-width: 400px;
-    margin-right: 5%;
-    margin-bottom: 5%;
-}
-.serice-box-btn-wrap  {
-    display: flex;
-    position: absolute;
-    top: 44%;
-    left: 28%;
-}
-.serice-box-btn-wrap button {
-    border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
-    border-style: solid;
-    border-width: 1px;
-    padding: 15px 28px 15px;
-    font-size: 18px;
-    text-rendering: auto;
-    color: initial;
-    display: inline-block;
-    text-align: start;
-    margin: 0em;
-    cursor: pointer;
-}
-.serivice-box-title-wrap  {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    position: absolute;
-    top: 80%;
-    justify-content: flex-start;
     width: 100%;
-    align-items: flex-start;
-    min-height: 75px;
-    background-color: black;
-    opacity: 0.5;
-    color: white;
 }
-.serivice-box-title-wrap h2 {
-    padding: 0;
-    margin: 0;
-    font-size: 28px;
+
+.box-items-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
-.service-box-description {
-    margin: 0;
-    padding: 0;
+.box-item {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    border: 1px solid;
+    max-width: 20%;
+    width: 200px;
+    max-height: 100px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+.box-item h4 {
+    font-size: 14px;
+    text-align: left;
+    padding: 10px;
+    cursor: pointer;
 }
