--- a/src/components/CharacterStepsInfo/CharacterStepsInfo.css
+++ b/src/components/CharacterStepsInfo/CharacterStepsInfo.css
@@ -379,8 +379,9 @@
 
 .timeline {
 	height: 20px;
+    padding: 0;
 	list-style: none;
-	text-align: justify;
+	/* text-align: justify; */
 	margin: 80px auto;
 	background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 45%, rgba(191,128,11,1) 51%, rgba(255,255,255,0) 57%, rgba(255,255,255,0) 100%);
 }
@@ -391,6 +392,7 @@
 }
 .timeline li {
 	display: inline-block;
+    margin: 0 6% 0 6%;
 	width: 20px;
 	height: 20px;
 	background: gray;
@@ -412,10 +414,12 @@
 	transform: translateX(-50%);
 }
 .timeline li:nth-child(odd):before {
-	top: -40px;
+	top: -42px;
+    font-size: 20px;
 }
 .timeline li:nth-child(even):before {
-	bottom: 29px;
+	bottom: 38px;
+    font-size: 20px;
 }
 .timeline li:after {
 	display: inline-block;
