--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,8 @@ body {
     font-size: 16px;
 }
 .container {
-    max-width: 1024px;
+    min-width: 1024px;
+    max-width: 1600px;
     display: flex;
     position: relative;
     white-space: nowrap;
