--- a/src/components/Instruments/Instruments.css
+++ b/src/components/Instruments/Instruments.css
@@ -1,11 +1,10 @@
 .instruments-wrap {
     display: flex;
     flex-direction: row;
-    width: 860px;
+    width: 100%;
     margin-right: 20px;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
 }
 .instruments-list {
     display: flex;
