--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -21,7 +21,8 @@ h1 {
     min-height: 100vh;
     align-items: center;
     box-sizing: border-box;
-    max-width: 1024px;
+    min-width: 1024px;
+    max-width: 1400px;
     padding-left: 16px;
     padding-right: 16px;
     margin: 0 auto;
@@ -55,7 +56,7 @@ h1 {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 .box-item {
@@ -63,8 +64,8 @@ h1 {
     flex-direction: column;
     flex-wrap: wrap;
     border: 1px solid;
-    max-width: 20%;
-    width: 200px;
+    min-width: 17%;
+    max-width: 350px;
     max-height: 100px;
     margin-right: 20px;
     margin-bottom: 20px;
