--- a/src/components/CharacterStepsInfo/CharacterStepsInfo.css
+++ b/src/components/CharacterStepsInfo/CharacterStepsInfo.css
@@ -56,6 +56,7 @@
     align-items: end;
     width: 40%;
     position: relative;
+    margin-right: 10px;
 }
 .character-face-image-wrap img {
     border: 1px solid;
@@ -67,17 +68,18 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    align-items: flex-end;
+    align-items: flex-start;
     width: 56%;
-    justify-content: flex-end;
-    text-align: right;
+    justify-content: flex-start;
+    text-align: start;
 }
 .character-race-info,
 .character-race-content,
 .character-class-info,
 .character-class-content {
-    padding-right: 20px;
+    /* padding-right: 20px; */
     margin-bottom: 5px;
+    width: 100%;
 }
 .character-steps-stats-info-wrap {
     display: flex;
