--- a/src/components/CharacterStepsPreview/CharacterStepsPreview.css
+++ b/src/components/CharacterStepsPreview/CharacterStepsPreview.css
@@ -111,10 +111,15 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     text-align: left;
     flex-direction: column;
     padding-left: 10px;
+}
+.skill-item {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
 .character-race-stat-value, 
 .character-race-preview-speed, 
