--- a/src/components/CharacterStepsClass/CharacterStepsClass.css
+++ b/src/components/CharacterStepsClass/CharacterStepsClass.css
@@ -267,12 +267,13 @@
     align-items: center;
     margin-bottom: 10px;
 }
-.weapon-mastery-item, .armor-mastery-item  {
+.weapon-mastery-item, .armor-mastery-item, .equipment-item  {
     display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid;
     width: 30%;
+    max-width: 33%;
     min-height: 35px;
     font-size: 14px;
     margin-left: 10px;
@@ -291,14 +292,16 @@
 .class-equipment {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     margin-bottom: 20px;
 
 }
 .equipment-item {
     display: flex;
-    width: 25%;
-    margin-left: 5px;
+    max-width: 27%;
+    font-size: 14px;
+    padding: 5px;
 }
 .class-skills-wrap {
     display: flex;
@@ -331,10 +334,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 100%;
 }
 .start-equipment-list {
-    margin: 0;
+    width: 100%;
+    margin: 0 0 0 10px;
     padding: 0;
 }
 .start-equipment-list li {
@@ -342,6 +346,7 @@
     list-style: none;
     min-height: 20px;
     margin-bottom: 2px;
+    text-align: left;
 }
 .start-equipment-list .weapon::before {
     content: '\2694';
@@ -418,6 +423,27 @@
     cursor: pointer;
 }
 .class-view-title-span {
+    display: flex;
+    justify-content: center;
     font-weight: bold;
+    margin-bottom: 10px;
+}
+.class-abilities-count {
+    display: flex;
+    width: 100%;
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+.class-abilities-items-wrap {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 0 20px 10px;
+    padding: 0;
+}
+.class-abilities-items-wrap .class-abilities-item {
+    list-style: none;
+    margin-right: 7px;
     margin-bottom: 10px;
 }
