--- a/src/components/CharacterStepsClass/CharacterStepsClass.css
+++ b/src/components/CharacterStepsClass/CharacterStepsClass.css
@@ -327,6 +327,7 @@
 .start-equipment-row {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     width: 100%;
     margin-bottom: 10px;
 }
