--- a/src/components/CharacterBackground/CharacterBackground.css
+++ b/src/components/CharacterBackground/CharacterBackground.css
@@ -176,7 +176,13 @@
     overflow-y: scroll;
     max-height: 200px;
 }
-.character-background-equipment {
+.character-background-equipment, 
+.character-background-skills, 
+.background-non-combat-eqip {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
     margin-bottom: 20px;
 }
 .character-background-equipment h4, 
@@ -189,7 +195,7 @@
 .character-background-other h4 {
     font-family: Verdana, sans-serif;
     font-size: 16px;
-    margin-bottom: 20px;
+    margin: 10px;
     width: 100%;
 }
 .character-background-name-title {
@@ -267,4 +273,16 @@
 }
 .character-worldview-wrap {
     margin-bottom: 20px;
+}
+.background-other-content ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+}
+.background-other-content ul li {
+    margin-bottom: 5px;
+    text-align: left;
+    list-style: none;
 }
