--- a/src/components/CharacterStepsClass/CharacterStepsClass.css
+++ b/src/components/CharacterStepsClass/CharacterStepsClass.css
@@ -240,7 +240,7 @@
 .character-class-preview-subtitle {
     margin-bottom: 20px;
 }
-.сlass-features, .class-features-description {
+.сlass-features {
     margin-bottom: 20px;
 }
 .сlass-features p {
@@ -456,7 +456,7 @@
     align-items: center;
     list-style: none;
     width: 90%;
-    margin: 0 0 20px 10px;
+    margin: 0 0 0 10px;
     padding: 0;
 }
 .class-skills-list .class-skills-item {
