--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,7 +18,7 @@ body {
 
 h1, h2, h3, h4, h5 {
     font-family: Georgia, serif;
-    font-size: 46px;  
+    /* font-size: 46px;   */
 }
 
 input {
