--- a/src/components/CharacterStepsStats/CharacterStepsStats.css
+++ b/src/components/CharacterStepsStats/CharacterStepsStats.css
@@ -4,7 +4,6 @@
     flex-wrap: wrap;
     margin-right: 10px;
     border: 1px solid;
-    justify-content: center;
     align-items: center;
     width: 45%;
 }
@@ -15,7 +14,7 @@
     justify-content: center;
     align-items: center;
     font-size: 16px;
-    margin: 0 0 20px 0;
+    margin: 20px 0;
 }
 .character-steps-dice-wrap {
     width: 90%;
@@ -195,6 +194,10 @@
     max-width: 85px;
     display: flex;
     justify-content: center;
+}
+.character-steps-hand-dice-title h5 {
+    margin: 0;
+    padding: 0 0 20px 0;
 }
 .dice-value-plus {
     display: flex;
