--- a/src/components/CharacterStepsPreview/CharacterStepsPreview.css
+++ b/src/components/CharacterStepsPreview/CharacterStepsPreview.css
@@ -331,3 +331,31 @@
 .character-bonuce-stat-increase-recomendation-wrap h4 {
     margin: 0 0 10px 0;
 }
+.character-bonuce-stat-increase-recomendation-content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    
+}
+.character-bonuce-stat-increase-recomendation-content p {
+    padding: 0;
+    margin: 0;
+    text-align: left;
+    line-height: 1.5;
+    width: 100%;
+}
+.character-recomended-stat {
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 16px;
+    padding-right: 10px;
+}
+.character-recomended-stat-name {
+    font-weight: bold;
+    text-transform: capitalize;
+    font-size: 16px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
