--- a/src/components/CharacterStepsSkills/CharacterStepsSkills.css
+++ b/src/components/CharacterStepsSkills/CharacterStepsSkills.css
@@ -23,7 +23,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 .character-steps-saving-throws-item {
@@ -31,7 +31,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    width: 15%;
+    width: 14.5%;
     margin-right: 6px;
 }
 .character-steps-saving-throws-item-header {
@@ -87,20 +87,19 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    padding: 0 10px;
+    padding: 0 4px;
 }
 .character-steps-skills-has-item-row, .character-steps-skills-new-item-row {
     display: flex;
     flex-wrap: wrap;
-    width: 47.7%;
-    margin-right: 10px;
+    width: 50%;
 }
 .character-skills-item {
     position: relative;
-    width: 43%;
+    width: 45%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     border: 1px solid;
     min-height: 60px;
@@ -175,12 +174,13 @@
 .character-steps-skills-tools-row {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
     width: 100%;
-    padding: 0 10px;
 }
 .character-steps-skills-tools-item {
     position: relative;
-    width: 16%;
+    width: 22%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -188,7 +188,7 @@
     border: 1px solid;
     min-height: 60px;
     max-height: 60px;
-    margin-right: 5px;
+    margin-right: 10px;
     margin-bottom: 5px;
 }
 .character-steps-skills-tools-wrap {
