--- a/src/components/CharacterStepsSkills/CharacterStepsSkills.css
+++ b/src/components/CharacterStepsSkills/CharacterStepsSkills.css
@@ -220,7 +220,9 @@
 .character-steps-skills-weapon-wrap h3 {
     margin: 0 0 10px 0;
 }
-.character-steps-weapon-row, .character-steps-language-row {
+.character-steps-weapon-row,
+.character-steps-language-row,
+.character-steps-armor-row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -228,16 +230,20 @@
     width: 100%;
     margin-bottom: 20px;
 }
-.character-steps-weapon-item, .character-steps-language-item {
+.character-steps-weapon-item, 
+.character-steps-language-item, 
+.character-steps-armor-item {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 14px;
     max-width: 25%;
+    min-width: 75px;
     min-height: 25px;
-    background-color: gray;
     margin-right: 5px;
+    margin-bottom: 10px;
     padding: 5px;
+    border: 1px solid;
     cursor: pointer;
 }
 .character-steps-skills-language-wrap {
