--- a/src/components/CharacterStepsSkills/CharacterStepsSkills.css
+++ b/src/components/CharacterStepsSkills/CharacterStepsSkills.css
@@ -211,6 +211,7 @@
 .character-steps-skills-tools-item {
     position: relative;
     width: 22%;
+    min-width: 100px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -238,6 +239,7 @@
     justify-content: center;
     align-items: center;
     font-size: 14px;
+    min-height: 20px;
 }
 .character-steps-skills-weapon-wrap {
     display: flex;
