--- a/src/components/CharacterStepsSkills/CharacterStepsSkills.css
+++ b/src/components/CharacterStepsSkills/CharacterStepsSkills.css
@@ -218,7 +218,6 @@
     align-items: center;
     border: 1px solid;
     min-height: 60px;
-    max-height: 60px;
     margin-right: 10px;
     margin-bottom: 5px;
 }
@@ -319,4 +318,34 @@
     flex-wrap: wrap;
     width: 100%;
     margin-bottom: 20px;
+}
+.character-steps-preview-abilities-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.total-bonuce-class-abilities,
+.total-bonuce-race-abilities,
+.total-bonuce-background-abilities {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.total-bonuce-abilities-list {
+    padding: 0;
+    margin: 0;
+}
+.total-bonuce-abilities-list li {
+    list-style: none;
+    margin-bottom: 10px;
+}
+.ability-chosen {
+    color: red;
+    text-decoration: underline;
+}
+.ability-not-chosen {
+    text-decoration: line-through;
+    font-weight: normal;
 }
