--- a/src/components/CharacterStepsSkills/CharacterStepsSkills.css
+++ b/src/components/CharacterStepsSkills/CharacterStepsSkills.css
@@ -262,7 +262,8 @@
     margin-bottom: 20px;
 }
 .character-steps-weapon-item, 
-.character-steps-language-item, 
+.character-steps-language-item,
+.instrument-add-item, 
 .character-steps-armor-item {
     display: flex;
     justify-content: center;
@@ -361,7 +362,8 @@
 .reset-points-wrap {
     margin: 0 20px;
 }
-.character-steps-skills-language-add-btn-wrap {
+.character-steps-skills-language-add-btn-wrap,
+.character-steps-skills-instrument-add-btn-wrap {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -369,4 +371,13 @@
     align-items: center;
     width: 100%;
     margin-bottom: 20px;
+}
+.character-steps-skills-language-panel-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
 }
