--- a/src/components/CharacterStepsSkills/CharacterStepsSkills.css
+++ b/src/components/CharacterStepsSkills/CharacterStepsSkills.css
@@ -146,11 +146,81 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    justify-content: center;
     max-width: 25%;
     min-width: 100px;
+    min-height: 50px;
+    max-height: 75px;
     border: 1px solid;
     padding: 5px;
     margin-right: 10px;
     margin-bottom: 10px;
     cursor: pointer;
+    font-size: 16px;
+    position: relative;
+    top: 0;
+    padding-bottom: 10px;
+}
+.character-steps-skills-item:hover {
+    border-color: red;
+}
+.skill-item-title {
+    font-size: 14px;
+    position: absolute;
+    top: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.skill-item-lvl-req {
+    width: 90%;
+    font-size: 14px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 1px solid;
+}
+.skill-item-description-popup-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    min-width: 200px;
+    background-color: gainsboro;
+    position: absolute;
+    min-height: 150px;
+    width: 100%;
+    z-index: 5;
+    padding: 10px;
+}
+.skill-item-description-popup-wrap-hidden {
+    display: none;
+}
+.skill-item-popup-close-wrap {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 6;
+}
+.skill-item-popup-close::before {
+    position: relative;
+    max-width: 20px;
+    max-height: 20px;
+    right: 0;
+    content: '\2716';
+}
+.skill-item-popup-title {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 100px;
+    font-size: 16px;
+    text-decoration: underline;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.skill-item-description-popup {
+    font-size: 14px;
+    line-height: 1.4;
 }
