--- a/src/components/CharacterStepsSkills/CharacterStepsSkills.css
+++ b/src/components/CharacterStepsSkills/CharacterStepsSkills.css
@@ -17,15 +17,18 @@
     width: 44%;
     padding: 0 10px 0 0;
 }
-.spellbook-navigation-row {
+.spellbook-navigation-row,
+.spellbook-level-navigation-row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
 }
 .spellbook-navigation-btn-level,
+.spellbook-level-navigation-btn-level,
 .spellbook-navigation-btn-level-disabled {
     display: flex;
     flex-wrap: wrap;
