--- a/src/components/CharacterStepsSkills/CharacterStepsSkills.css
+++ b/src/components/CharacterStepsSkills/CharacterStepsSkills.css
@@ -78,6 +78,10 @@
     justify-content: center;
     font-size: 14px;
     margin-bottom: 10px;
+    width: 100%;
+}
+.character-steps-selected-spells-spell-level {
+    color: #C14B3C;
 }
 .character-steps-spellbook-btns-row {
     display: flex;
